src/Playit/Parser.info
-----------------------------------------------------------------------------
Info file generated by Happy Version 1.19.9 from src/Playit/Parser.y
-----------------------------------------------------------------------------

state 9 contains 1 shift/reduce conflicts.
state 10 contains 2 shift/reduce conflicts.
state 22 contains 1 shift/reduce conflicts.
state 38 contains 1 shift/reduce conflicts.
state 49 contains 1 shift/reduce conflicts.
state 62 contains 2 shift/reduce conflicts.
state 63 contains 19 shift/reduce conflicts.
state 65 contains 19 shift/reduce conflicts.
state 67 contains 2 shift/reduce conflicts.
state 68 contains 2 shift/reduce conflicts.
state 69 contains 2 shift/reduce conflicts.
state 71 contains 1 shift/reduce conflicts.
state 74 contains 1 shift/reduce conflicts.
state 75 contains 2 shift/reduce conflicts.
state 79 contains 1 shift/reduce conflicts.
state 126 contains 1 shift/reduce conflicts.
state 134 contains 2 shift/reduce conflicts.
state 135 contains 19 shift/reduce conflicts.
state 136 contains 2 shift/reduce conflicts.
state 137 contains 2 shift/reduce conflicts.
state 139 contains 2 shift/reduce conflicts.
state 140 contains 2 shift/reduce conflicts.
state 141 contains 2 shift/reduce conflicts.
state 142 contains 2 shift/reduce conflicts.
state 143 contains 2 shift/reduce conflicts.
state 144 contains 2 shift/reduce conflicts.
state 145 contains 2 shift/reduce conflicts.
state 146 contains 2 shift/reduce conflicts.
state 147 contains 2 shift/reduce conflicts.
state 148 contains 2 shift/reduce conflicts.
state 149 contains 2 shift/reduce conflicts.
state 150 contains 2 shift/reduce conflicts.
state 152 contains 2 shift/reduce conflicts.
state 167 contains 1 shift/reduce conflicts.
state 177 contains 1 shift/reduce conflicts.
state 187 contains 1 shift/reduce conflicts.
state 191 contains 19 shift/reduce conflicts.
state 214 contains 2 reduce/reduce conflicts.
state 222 contains 1 shift/reduce conflicts.
state 239 contains 19 shift/reduce conflicts.

rule 66 is unused

terminal union is unused

-----------------------------------------------------------------------------
Grammar
-----------------------------------------------------------------------------
	%start_parse -> Programa                           (0)
	Programa -> world programa ":" Instrucciones fin endInstr   (1)
	EndInstructs -> endInstr                           (2)
	EndInstructs -> EndInstructs endInstr              (3)
	Instrucciones -> Instruccion Instrucciones         (4)
	Instrucciones -> Instruccion                       (5)
	Instruccion -> Declaraciones                       (6)
	Instruccion -> registro nombre ":" EndInstructs Declaraciones fin EndInstructs   (7)
	Instruccion -> nombre nombre                       (8)
	Instruccion -> nombre nombre "=" Expresion         (9)
	Instruccion -> nombre nombre "=" "{" Expresiones "}"   (10)
	Instruccion -> Controller                          (11)
	Instruccion -> Play                                (12)
	Instruccion -> Button                              (13)
	Instruccion -> Asignacion                          (14)
	Instruccion -> EntradaSalida                       (15)
	Instruccion -> Free                                (16)
	Instruccion -> FunctionCreate                      (17)
	Instruccion -> return Expresion                    (18)
	Instruccion -> break                               (19)
	Instruccion -> continue                            (20)
	Instruccion -> Expresion                           (21)
	Instruccion -> endInstr                            (22)
	Declaraciones -> Declaracion                       (23)
	Declaraciones -> Declaracion EndInstructs Declaraciones   (24)
	Declaracion -> Tipo Identificadores                (25)
	Identificadores -> Identificador                   (26)
	Identificadores -> Identificadores "," Identificador   (27)
	Identificador -> nombre                            (28)
	Identificador -> nombre "=" Expresion              (29)
	Lvalue -> nombre                                   (30)
	Lvalue -> pointer nombre                           (31)
	Lvalue -> Lvalue "." Lvalue                        (32)
	Lvalue -> Lvalue "|}" Expresion "{|"               (33)
	Lvalue -> Lvalue "<<" Expresion ">>"               (34)
	Tipo -> int                                        (35)
	Tipo -> float                                      (36)
	Tipo -> bool                                       (37)
	Tipo -> char                                       (38)
	Tipo -> str                                        (39)
	Tipo -> Tipo "|}" Expresion "{|"                   (40)
	Tipo -> list of Tipo                               (41)
	Tipo -> Apuntador                                  (42)
	Asignacion -> Lvalue "=" Expresion                 (43)
	Button -> button ":" endInstr Guardias fin         (44)
	Guardias -> Guardia                                (45)
	Guardias -> Guardia Guardias                       (46)
	Guardia -> "|" Expresion "}" Instrucciones         (47)
	Guardia -> "|" else "}" Instrucciones              (48)
	Controller -> for InitVar "=" entero "->" entero ":" Instrucciones fin   (49)
	Controller -> for InitVar "=" entero "->" entero while Expresion ":" Instrucciones fin   (50)
	Controller -> for InitVar "<-" nombre ":" Instrucciones fin   (51)
	InitVar -> nombre                                  (52)
	Play -> do ":" Instrucciones while Expresion fin   (53)
	EntradaSalida -> print Expresiones                 (54)
	Free -> free nombre                                (55)
	Free -> free "|" "}" "{" "|" nombre                (56)
	Free -> free "<<" ">>" nombre                      (57)
	Subrutina -> Boss                                  (58)
	Subrutina -> Monster                               (59)
	Boss -> function nombre "(" ParametrosFuncionDeclaracion ")" Tipo ":" Instrucciones fin   (60)
	Monster -> proc nombre "(" ParametrosFuncionDeclaracion ")" Tipo ":" Instrucciones fin   (61)
	ParametrosFuncionDeclaracion -> ParametroEnFuncionDeclaracion   (62)
	ParametrosFuncionDeclaracion -> ParametroEnFuncionDeclaracion "," ParametroEnFuncionDeclaracion   (63)
	ParametroEnFuncionDeclaracion -> Tipo nombre       (64)
	ParametroEnFuncionDeclaracion -> Tipo "?" nombre   (65)
	ParametroEnFuncionDeclaracion -> nombre "?" nombre   (66)
	ParametroEnFuncionDeclaracion -> nombre "?" nombre   (67)
	ParametroEnFuncionDeclaracion ->                   (68)
	FunctionCreate -> Subrutina                        (69)
	Expresiones -> Expresion                           (70)
	Expresiones -> Expresiones "," Expresion           (71)
	Expresion -> Expresion "+" Expresion               (72)
	Expresion -> Expresion "-" Expresion               (73)
	Expresion -> Expresion "*" Expresion               (74)
	Expresion -> Expresion "%" Expresion               (75)
	Expresion -> Expresion "/" Expresion               (76)
	Expresion -> Expresion "//" Expresion              (77)
	Expresion -> Expresion "&&" Expresion              (78)
	Expresion -> Expresion "||" Expresion              (79)
	Expresion -> Expresion "==" Expresion              (80)
	Expresion -> Expresion "!=" Expresion              (81)
	Expresion -> Expresion ">=" Expresion              (82)
	Expresion -> Expresion "<=" Expresion              (83)
	Expresion -> Expresion ">" Expresion               (84)
	Expresion -> Expresion "<" Expresion               (85)
	Expresion -> Expresion ":" Expresion               (86)
	Expresion -> Expresion "::" Expresion              (87)
	Expresion -> Expresion "?" Expresion ":" Expresion   (88)
	Expresion -> "(" Expresion ")"                     (89)
	Expresion -> "|}" Expresiones "{|"                 (90)
	Expresion -> "<<" Expresiones ">>"                 (91)
	Expresion -> funcCall nombre                       (92)
	Expresion -> funcCall nombre "(" Expresiones ")"   (93)
	Expresion -> new Tipo                              (94)
	Expresion -> input                                 (95)
	Expresion -> input str                             (96)
	Expresion -> "-" Expresion                         (97)
	Expresion -> "#" Expresion                         (98)
	Expresion -> "!" Expresion                         (99)
	Expresion -> upperCase Expresion                   (100)
	Expresion -> lowerCase Expresion                   (101)
	Expresion -> Expresion "++"                        (102)
	Expresion -> Expresion "--"                        (103)
	Expresion -> true                                  (104)
	Expresion -> false                                 (105)
	Expresion -> entero                                (106)
	Expresion -> flotante                              (107)
	Expresion -> caracter                              (108)
	Expresion -> string                                (109)
	Expresion -> null                                  (110)
	Expresion -> Lvalue                                (111)
	Apuntador -> Tipo pointer nombre                   (112)

-----------------------------------------------------------------------------
Terminals
-----------------------------------------------------------------------------
	bool           { TkBTL _ _ }
	null           { TkDTZ _ _ }
	registro       { TkINV _ _ }
	union          { TkITM _ _ }
	list           { TkKIT _ _ }
	int            { TkPWR _ _ }
	char           { TkRNE _ _ }
	str            { TkRNS _ _ }
	float          { TkSKL _ _ }
	button         { TkBTN _ _ }
	proc           { TkBSS _ _ }
	for            { TkCTR _ _ }
	print          { TkDRP _ _ }
	else           { TkNPR _ _ }
	free           { TkFRE _ _ }
	break          { TkGMO _ _ }
	input          { TkJST _ _ }
	continue       { TkKPP _ _ }
	funcCall       { TkKLL _ _ }
	while          { TkLCK _ _ }
	function       { TkMST _ _ }
	do             { TkPLY _ _ }
	pointer        { TkAPT _ _ }
	"."            { TkSPW _ _ }
	new            { TkSMN _ _ }
	return         { TkNLK _ _ }
	world          { TkWRL _ _ }
	of             { TkOFK _ _ }
	endInstr       { TokenEndInstruction _ _ }
	true           { TkWIN _ _ }
	false          { TkLOS _ _ }
	programa       { TkNMB _ _ }
	nombre         { TkIDF _ _ }
	caracter       { TkCHA _ _ }
	string         { TkSTG _ _ }
	entero         { TkINT _ _ }
	flotante       { TkFLT _ _ }
	fin            { TkFIN _ _ }
	"//"           { TkIDV _ _ }
	"||"           { TkLOR _ _ }
	"&&"           { TkAND _ _ }
	"<="           { TkLET _ _ }
	"=="           { TkEQL _ _ }
	"!="           { TkNEQ _ _ }
	">="           { TkGET _ _ }
	"<<"           { TkLSA _ _ }
	">>"           { TkLSC _ _ }
	"++"           { TkINC _ _ }
	"--"           { TkDEC _ _ }
	"<-"           { TkIN  _ _ }
	"->"           { TkTO  _ _ }
	"|}"           { TkARA _ _ }
	"{|"           { TkARC _ _ }
	"+"            { TkSUM _ _ }
	"-"            { TkMIN _ _ }
	"*"            { TkTMS _ _ }
	"/"            { TkDVD _ _ }
	"%"            { TkMOD _ _ }
	"#"            { TkLEN _ _ }
	"?"            { TkREF _ _ }
	"!"            { TkEXC _ _ }
	"<"            { TkLTH _ _ }
	">"            { TkGTH _ _ }
	"("            { TkPRA _ _ }
	")"            { TkPRC _ _ }
	"{"            { TkLLA _ _ }
	"}"            { TkLLC _ _ }
	","            { TkCOM _ _ }
	":"            { TkDSP _ _ }
	"::"           { TkCONCAT  _ _ }
	"|"            { TkCON _ _ }
	"="            { TkASG _ _ }
	upperCase      { TkUPP _ _ }
	lowerCase      { TkLOW _ _ }

-----------------------------------------------------------------------------
Non-terminals
-----------------------------------------------------------------------------
	%start_parse    rule  0
	Programa        rule  1
	EndInstructs    rules 2, 3
	Instrucciones   rules 4, 5
	Instruccion     rules 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22
	Declaraciones   rules 23, 24
	Declaracion     rule  25
	Identificadores rules 26, 27
	Identificador   rules 28, 29
	Lvalue          rules 30, 31, 32, 33, 34
	Tipo            rules 35, 36, 37, 38, 39, 40, 41, 42
	Asignacion      rule  43
	Button          rule  44
	Guardias        rules 45, 46
	Guardia         rules 47, 48
	Controller      rules 49, 50, 51
	InitVar         rule  52
	Play            rule  53
	EntradaSalida   rule  54
	Free            rules 55, 56, 57
	Subrutina       rules 58, 59
	Boss            rule  60
	Monster         rule  61
	ParametrosFuncionDeclaracion rules 62, 63
	ParametroEnFuncionDeclaracion rules 64, 65, 66, 67, 68
	FunctionCreate  rule  69
	Expresiones     rules 70, 71
	Expresion       rules 72, 73, 74, 75, 76, 77, 78, 79, 80, 81, 82, 83, 84, 85, 86, 87, 88, 89, 90, 91, 92, 93, 94, 95, 96, 97, 98, 99, 100, 101, 102, 103, 104, 105, 106, 107, 108, 109, 110, 111
	Apuntador       rule  112

-----------------------------------------------------------------------------
States
-----------------------------------------------------------------------------
State 0


	world          shift, and enter state 2

	Programa       goto state 3

State 1


	world          shift, and enter state 2


State 2

	Programa -> world . programa ":" Instrucciones fin endInstr    (rule 1)

	programa       shift, and enter state 4


State 3

	%start_parse -> Programa .                          (rule 0)

	%eof           accept


State 4

	Programa -> world programa . ":" Instrucciones fin endInstr    (rule 1)

	":"            shift, and enter state 5


State 5

	Programa -> world programa ":" . Instrucciones fin endInstr    (rule 1)

	bool           shift, and enter state 24
	null           shift, and enter state 25
	registro       shift, and enter state 26
	list           shift, and enter state 27
	int            shift, and enter state 28
	char           shift, and enter state 29
	str            shift, and enter state 30
	float          shift, and enter state 31
	button         shift, and enter state 32
	proc           shift, and enter state 33
	for            shift, and enter state 34
	print          shift, and enter state 35
	free           shift, and enter state 36
	break          shift, and enter state 37
	input          shift, and enter state 38
	continue       shift, and enter state 39
	funcCall       shift, and enter state 40
	function       shift, and enter state 41
	do             shift, and enter state 42
	pointer        shift, and enter state 43
	new            shift, and enter state 44
	return         shift, and enter state 45
	endInstr       shift, and enter state 46
	true           shift, and enter state 47
	false          shift, and enter state 48
	nombre         shift, and enter state 49
	caracter       shift, and enter state 50
	string         shift, and enter state 51
	entero         shift, and enter state 52
	flotante       shift, and enter state 53
	"<<"           shift, and enter state 54
	"|}"           shift, and enter state 55
	"-"            shift, and enter state 56
	"#"            shift, and enter state 57
	"!"            shift, and enter state 58
	"("            shift, and enter state 59
	upperCase      shift, and enter state 60
	lowerCase      shift, and enter state 61

	Instrucciones  goto state 6
	Instruccion    goto state 7
	Declaraciones  goto state 8
	Declaracion    goto state 9
	Lvalue         goto state 10
	Tipo           goto state 11
	Asignacion     goto state 12
	Button         goto state 13
	Controller     goto state 14
	Play           goto state 15
	EntradaSalida  goto state 16
	Free           goto state 17
	Subrutina      goto state 18
	Boss           goto state 19
	Monster        goto state 20
	FunctionCreate goto state 21
	Expresion      goto state 22
	Apuntador      goto state 23

State 6

	Programa -> world programa ":" Instrucciones . fin endInstr    (rule 1)

	fin            shift, and enter state 122


State 7

	Instrucciones -> Instruccion . Instrucciones        (rule 4)
	Instrucciones -> Instruccion .                      (rule 5)

	bool           shift, and enter state 24
	null           shift, and enter state 25
	registro       shift, and enter state 26
	list           shift, and enter state 27
	int            shift, and enter state 28
	char           shift, and enter state 29
	str            shift, and enter state 30
	float          shift, and enter state 31
	button         shift, and enter state 32
	proc           shift, and enter state 33
	for            shift, and enter state 34
	print          shift, and enter state 35
	free           shift, and enter state 36
	break          shift, and enter state 37
	input          shift, and enter state 38
	continue       shift, and enter state 39
	funcCall       shift, and enter state 40
	while          reduce using rule 5
	function       shift, and enter state 41
	do             shift, and enter state 42
	pointer        shift, and enter state 43
	new            shift, and enter state 44
	return         shift, and enter state 45
	endInstr       shift, and enter state 46
	true           shift, and enter state 47
	false          shift, and enter state 48
	nombre         shift, and enter state 49
	caracter       shift, and enter state 50
	string         shift, and enter state 51
	entero         shift, and enter state 52
	flotante       shift, and enter state 53
	fin            reduce using rule 5
	"<<"           shift, and enter state 54
	"|}"           shift, and enter state 55
	"-"            shift, and enter state 56
	"#"            shift, and enter state 57
	"!"            shift, and enter state 58
	"("            shift, and enter state 59
	"|"            reduce using rule 5
	upperCase      shift, and enter state 60
	lowerCase      shift, and enter state 61

	Instrucciones  goto state 121
	Instruccion    goto state 7
	Declaraciones  goto state 8
	Declaracion    goto state 9
	Lvalue         goto state 10
	Tipo           goto state 11
	Asignacion     goto state 12
	Button         goto state 13
	Controller     goto state 14
	Play           goto state 15
	EntradaSalida  goto state 16
	Free           goto state 17
	Subrutina      goto state 18
	Boss           goto state 19
	Monster        goto state 20
	FunctionCreate goto state 21
	Expresion      goto state 22
	Apuntador      goto state 23

State 8

	Instruccion -> Declaraciones .                      (rule 6)

	bool           reduce using rule 6
	null           reduce using rule 6
	registro       reduce using rule 6
	list           reduce using rule 6
	int            reduce using rule 6
	char           reduce using rule 6
	str            reduce using rule 6
	float          reduce using rule 6
	button         reduce using rule 6
	proc           reduce using rule 6
	for            reduce using rule 6
	print          reduce using rule 6
	free           reduce using rule 6
	break          reduce using rule 6
	input          reduce using rule 6
	continue       reduce using rule 6
	funcCall       reduce using rule 6
	while          reduce using rule 6
	function       reduce using rule 6
	do             reduce using rule 6
	pointer        reduce using rule 6
	new            reduce using rule 6
	return         reduce using rule 6
	endInstr       reduce using rule 6
	true           reduce using rule 6
	false          reduce using rule 6
	nombre         reduce using rule 6
	caracter       reduce using rule 6
	string         reduce using rule 6
	entero         reduce using rule 6
	flotante       reduce using rule 6
	fin            reduce using rule 6
	"<<"           reduce using rule 6
	"|}"           reduce using rule 6
	"-"            reduce using rule 6
	"#"            reduce using rule 6
	"!"            reduce using rule 6
	"("            reduce using rule 6
	"|"            reduce using rule 6
	upperCase      reduce using rule 6
	lowerCase      reduce using rule 6


State 9

	Declaraciones -> Declaracion .                      (rule 23)
	Declaraciones -> Declaracion . EndInstructs Declaraciones    (rule 24)

	bool           reduce using rule 23
	null           reduce using rule 23
	registro       reduce using rule 23
	list           reduce using rule 23
	int            reduce using rule 23
	char           reduce using rule 23
	str            reduce using rule 23
	float          reduce using rule 23
	button         reduce using rule 23
	proc           reduce using rule 23
	for            reduce using rule 23
	print          reduce using rule 23
	free           reduce using rule 23
	break          reduce using rule 23
	input          reduce using rule 23
	continue       reduce using rule 23
	funcCall       reduce using rule 23
	while          reduce using rule 23
	function       reduce using rule 23
	do             reduce using rule 23
	pointer        reduce using rule 23
	new            reduce using rule 23
	return         reduce using rule 23
	endInstr       shift, and enter state 120
			(reduce using rule 23)

	true           reduce using rule 23
	false          reduce using rule 23
	nombre         reduce using rule 23
	caracter       reduce using rule 23
	string         reduce using rule 23
	entero         reduce using rule 23
	flotante       reduce using rule 23
	fin            reduce using rule 23
	"<<"           reduce using rule 23
	"|}"           reduce using rule 23
	"-"            reduce using rule 23
	"#"            reduce using rule 23
	"!"            reduce using rule 23
	"("            reduce using rule 23
	"|"            reduce using rule 23
	upperCase      reduce using rule 23
	lowerCase      reduce using rule 23

	EndInstructs   goto state 119

State 10

	Lvalue -> Lvalue . "." Lvalue                       (rule 32)
	Lvalue -> Lvalue . "|}" Expresion "{|"              (rule 33)
	Lvalue -> Lvalue . "<<" Expresion ">>"              (rule 34)
	Asignacion -> Lvalue . "=" Expresion                (rule 43)
	Expresion -> Lvalue .                               (rule 111)

	bool           reduce using rule 111
	null           reduce using rule 111
	registro       reduce using rule 111
	list           reduce using rule 111
	int            reduce using rule 111
	char           reduce using rule 111
	str            reduce using rule 111
	float          reduce using rule 111
	button         reduce using rule 111
	proc           reduce using rule 111
	for            reduce using rule 111
	print          reduce using rule 111
	free           reduce using rule 111
	break          reduce using rule 111
	input          reduce using rule 111
	continue       reduce using rule 111
	funcCall       reduce using rule 111
	while          reduce using rule 111
	function       reduce using rule 111
	do             reduce using rule 111
	pointer        reduce using rule 111
	"."            shift, and enter state 115
	new            reduce using rule 111
	return         reduce using rule 111
	endInstr       reduce using rule 111
	true           reduce using rule 111
	false          reduce using rule 111
	nombre         reduce using rule 111
	caracter       reduce using rule 111
	string         reduce using rule 111
	entero         reduce using rule 111
	flotante       reduce using rule 111
	fin            reduce using rule 111
	"//"           reduce using rule 111
	"||"           reduce using rule 111
	"&&"           reduce using rule 111
	"<="           reduce using rule 111
	"=="           reduce using rule 111
	"!="           reduce using rule 111
	">="           reduce using rule 111
	"<<"           shift, and enter state 116
			(reduce using rule 111)

	"++"           reduce using rule 111
	"--"           reduce using rule 111
	"|}"           shift, and enter state 117
			(reduce using rule 111)

	"+"            reduce using rule 111
	"-"            reduce using rule 111
	"*"            reduce using rule 111
	"/"            reduce using rule 111
	"%"            reduce using rule 111
	"#"            reduce using rule 111
	"?"            reduce using rule 111
	"!"            reduce using rule 111
	"<"            reduce using rule 111
	">"            reduce using rule 111
	"("            reduce using rule 111
	":"            reduce using rule 111
	"::"           reduce using rule 111
	"|"            reduce using rule 111
	"="            shift, and enter state 118
	upperCase      reduce using rule 111
	lowerCase      reduce using rule 111


State 11

	Declaracion -> Tipo . Identificadores               (rule 25)
	Tipo -> Tipo . "|}" Expresion "{|"                  (rule 40)
	Apuntador -> Tipo . pointer nombre                  (rule 112)

	pointer        shift, and enter state 112
	nombre         shift, and enter state 113
	"|}"           shift, and enter state 114

	Identificadoresgoto state 110
	Identificador  goto state 111

State 12

	Instruccion -> Asignacion .                         (rule 14)

	bool           reduce using rule 14
	null           reduce using rule 14
	registro       reduce using rule 14
	list           reduce using rule 14
	int            reduce using rule 14
	char           reduce using rule 14
	str            reduce using rule 14
	float          reduce using rule 14
	button         reduce using rule 14
	proc           reduce using rule 14
	for            reduce using rule 14
	print          reduce using rule 14
	free           reduce using rule 14
	break          reduce using rule 14
	input          reduce using rule 14
	continue       reduce using rule 14
	funcCall       reduce using rule 14
	while          reduce using rule 14
	function       reduce using rule 14
	do             reduce using rule 14
	pointer        reduce using rule 14
	new            reduce using rule 14
	return         reduce using rule 14
	endInstr       reduce using rule 14
	true           reduce using rule 14
	false          reduce using rule 14
	nombre         reduce using rule 14
	caracter       reduce using rule 14
	string         reduce using rule 14
	entero         reduce using rule 14
	flotante       reduce using rule 14
	fin            reduce using rule 14
	"<<"           reduce using rule 14
	"|}"           reduce using rule 14
	"-"            reduce using rule 14
	"#"            reduce using rule 14
	"!"            reduce using rule 14
	"("            reduce using rule 14
	"|"            reduce using rule 14
	upperCase      reduce using rule 14
	lowerCase      reduce using rule 14


State 13

	Instruccion -> Button .                             (rule 13)

	bool           reduce using rule 13
	null           reduce using rule 13
	registro       reduce using rule 13
	list           reduce using rule 13
	int            reduce using rule 13
	char           reduce using rule 13
	str            reduce using rule 13
	float          reduce using rule 13
	button         reduce using rule 13
	proc           reduce using rule 13
	for            reduce using rule 13
	print          reduce using rule 13
	free           reduce using rule 13
	break          reduce using rule 13
	input          reduce using rule 13
	continue       reduce using rule 13
	funcCall       reduce using rule 13
	while          reduce using rule 13
	function       reduce using rule 13
	do             reduce using rule 13
	pointer        reduce using rule 13
	new            reduce using rule 13
	return         reduce using rule 13
	endInstr       reduce using rule 13
	true           reduce using rule 13
	false          reduce using rule 13
	nombre         reduce using rule 13
	caracter       reduce using rule 13
	string         reduce using rule 13
	entero         reduce using rule 13
	flotante       reduce using rule 13
	fin            reduce using rule 13
	"<<"           reduce using rule 13
	"|}"           reduce using rule 13
	"-"            reduce using rule 13
	"#"            reduce using rule 13
	"!"            reduce using rule 13
	"("            reduce using rule 13
	"|"            reduce using rule 13
	upperCase      reduce using rule 13
	lowerCase      reduce using rule 13


State 14

	Instruccion -> Controller .                         (rule 11)

	bool           reduce using rule 11
	null           reduce using rule 11
	registro       reduce using rule 11
	list           reduce using rule 11
	int            reduce using rule 11
	char           reduce using rule 11
	str            reduce using rule 11
	float          reduce using rule 11
	button         reduce using rule 11
	proc           reduce using rule 11
	for            reduce using rule 11
	print          reduce using rule 11
	free           reduce using rule 11
	break          reduce using rule 11
	input          reduce using rule 11
	continue       reduce using rule 11
	funcCall       reduce using rule 11
	while          reduce using rule 11
	function       reduce using rule 11
	do             reduce using rule 11
	pointer        reduce using rule 11
	new            reduce using rule 11
	return         reduce using rule 11
	endInstr       reduce using rule 11
	true           reduce using rule 11
	false          reduce using rule 11
	nombre         reduce using rule 11
	caracter       reduce using rule 11
	string         reduce using rule 11
	entero         reduce using rule 11
	flotante       reduce using rule 11
	fin            reduce using rule 11
	"<<"           reduce using rule 11
	"|}"           reduce using rule 11
	"-"            reduce using rule 11
	"#"            reduce using rule 11
	"!"            reduce using rule 11
	"("            reduce using rule 11
	"|"            reduce using rule 11
	upperCase      reduce using rule 11
	lowerCase      reduce using rule 11


State 15

	Instruccion -> Play .                               (rule 12)

	bool           reduce using rule 12
	null           reduce using rule 12
	registro       reduce using rule 12
	list           reduce using rule 12
	int            reduce using rule 12
	char           reduce using rule 12
	str            reduce using rule 12
	float          reduce using rule 12
	button         reduce using rule 12
	proc           reduce using rule 12
	for            reduce using rule 12
	print          reduce using rule 12
	free           reduce using rule 12
	break          reduce using rule 12
	input          reduce using rule 12
	continue       reduce using rule 12
	funcCall       reduce using rule 12
	while          reduce using rule 12
	function       reduce using rule 12
	do             reduce using rule 12
	pointer        reduce using rule 12
	new            reduce using rule 12
	return         reduce using rule 12
	endInstr       reduce using rule 12
	true           reduce using rule 12
	false          reduce using rule 12
	nombre         reduce using rule 12
	caracter       reduce using rule 12
	string         reduce using rule 12
	entero         reduce using rule 12
	flotante       reduce using rule 12
	fin            reduce using rule 12
	"<<"           reduce using rule 12
	"|}"           reduce using rule 12
	"-"            reduce using rule 12
	"#"            reduce using rule 12
	"!"            reduce using rule 12
	"("            reduce using rule 12
	"|"            reduce using rule 12
	upperCase      reduce using rule 12
	lowerCase      reduce using rule 12


State 16

	Instruccion -> EntradaSalida .                      (rule 15)

	bool           reduce using rule 15
	null           reduce using rule 15
	registro       reduce using rule 15
	list           reduce using rule 15
	int            reduce using rule 15
	char           reduce using rule 15
	str            reduce using rule 15
	float          reduce using rule 15
	button         reduce using rule 15
	proc           reduce using rule 15
	for            reduce using rule 15
	print          reduce using rule 15
	free           reduce using rule 15
	break          reduce using rule 15
	input          reduce using rule 15
	continue       reduce using rule 15
	funcCall       reduce using rule 15
	while          reduce using rule 15
	function       reduce using rule 15
	do             reduce using rule 15
	pointer        reduce using rule 15
	new            reduce using rule 15
	return         reduce using rule 15
	endInstr       reduce using rule 15
	true           reduce using rule 15
	false          reduce using rule 15
	nombre         reduce using rule 15
	caracter       reduce using rule 15
	string         reduce using rule 15
	entero         reduce using rule 15
	flotante       reduce using rule 15
	fin            reduce using rule 15
	"<<"           reduce using rule 15
	"|}"           reduce using rule 15
	"-"            reduce using rule 15
	"#"            reduce using rule 15
	"!"            reduce using rule 15
	"("            reduce using rule 15
	"|"            reduce using rule 15
	upperCase      reduce using rule 15
	lowerCase      reduce using rule 15


State 17

	Instruccion -> Free .                               (rule 16)

	bool           reduce using rule 16
	null           reduce using rule 16
	registro       reduce using rule 16
	list           reduce using rule 16
	int            reduce using rule 16
	char           reduce using rule 16
	str            reduce using rule 16
	float          reduce using rule 16
	button         reduce using rule 16
	proc           reduce using rule 16
	for            reduce using rule 16
	print          reduce using rule 16
	free           reduce using rule 16
	break          reduce using rule 16
	input          reduce using rule 16
	continue       reduce using rule 16
	funcCall       reduce using rule 16
	while          reduce using rule 16
	function       reduce using rule 16
	do             reduce using rule 16
	pointer        reduce using rule 16
	new            reduce using rule 16
	return         reduce using rule 16
	endInstr       reduce using rule 16
	true           reduce using rule 16
	false          reduce using rule 16
	nombre         reduce using rule 16
	caracter       reduce using rule 16
	string         reduce using rule 16
	entero         reduce using rule 16
	flotante       reduce using rule 16
	fin            reduce using rule 16
	"<<"           reduce using rule 16
	"|}"           reduce using rule 16
	"-"            reduce using rule 16
	"#"            reduce using rule 16
	"!"            reduce using rule 16
	"("            reduce using rule 16
	"|"            reduce using rule 16
	upperCase      reduce using rule 16
	lowerCase      reduce using rule 16


State 18

	FunctionCreate -> Subrutina .                       (rule 69)

	bool           reduce using rule 69
	null           reduce using rule 69
	registro       reduce using rule 69
	list           reduce using rule 69
	int            reduce using rule 69
	char           reduce using rule 69
	str            reduce using rule 69
	float          reduce using rule 69
	button         reduce using rule 69
	proc           reduce using rule 69
	for            reduce using rule 69
	print          reduce using rule 69
	free           reduce using rule 69
	break          reduce using rule 69
	input          reduce using rule 69
	continue       reduce using rule 69
	funcCall       reduce using rule 69
	while          reduce using rule 69
	function       reduce using rule 69
	do             reduce using rule 69
	pointer        reduce using rule 69
	new            reduce using rule 69
	return         reduce using rule 69
	endInstr       reduce using rule 69
	true           reduce using rule 69
	false          reduce using rule 69
	nombre         reduce using rule 69
	caracter       reduce using rule 69
	string         reduce using rule 69
	entero         reduce using rule 69
	flotante       reduce using rule 69
	fin            reduce using rule 69
	"<<"           reduce using rule 69
	"|}"           reduce using rule 69
	"-"            reduce using rule 69
	"#"            reduce using rule 69
	"!"            reduce using rule 69
	"("            reduce using rule 69
	"|"            reduce using rule 69
	upperCase      reduce using rule 69
	lowerCase      reduce using rule 69


State 19

	Subrutina -> Boss .                                 (rule 58)

	bool           reduce using rule 58
	null           reduce using rule 58
	registro       reduce using rule 58
	list           reduce using rule 58
	int            reduce using rule 58
	char           reduce using rule 58
	str            reduce using rule 58
	float          reduce using rule 58
	button         reduce using rule 58
	proc           reduce using rule 58
	for            reduce using rule 58
	print          reduce using rule 58
	free           reduce using rule 58
	break          reduce using rule 58
	input          reduce using rule 58
	continue       reduce using rule 58
	funcCall       reduce using rule 58
	while          reduce using rule 58
	function       reduce using rule 58
	do             reduce using rule 58
	pointer        reduce using rule 58
	new            reduce using rule 58
	return         reduce using rule 58
	endInstr       reduce using rule 58
	true           reduce using rule 58
	false          reduce using rule 58
	nombre         reduce using rule 58
	caracter       reduce using rule 58
	string         reduce using rule 58
	entero         reduce using rule 58
	flotante       reduce using rule 58
	fin            reduce using rule 58
	"<<"           reduce using rule 58
	"|}"           reduce using rule 58
	"-"            reduce using rule 58
	"#"            reduce using rule 58
	"!"            reduce using rule 58
	"("            reduce using rule 58
	"|"            reduce using rule 58
	upperCase      reduce using rule 58
	lowerCase      reduce using rule 58


State 20

	Subrutina -> Monster .                              (rule 59)

	bool           reduce using rule 59
	null           reduce using rule 59
	registro       reduce using rule 59
	list           reduce using rule 59
	int            reduce using rule 59
	char           reduce using rule 59
	str            reduce using rule 59
	float          reduce using rule 59
	button         reduce using rule 59
	proc           reduce using rule 59
	for            reduce using rule 59
	print          reduce using rule 59
	free           reduce using rule 59
	break          reduce using rule 59
	input          reduce using rule 59
	continue       reduce using rule 59
	funcCall       reduce using rule 59
	while          reduce using rule 59
	function       reduce using rule 59
	do             reduce using rule 59
	pointer        reduce using rule 59
	new            reduce using rule 59
	return         reduce using rule 59
	endInstr       reduce using rule 59
	true           reduce using rule 59
	false          reduce using rule 59
	nombre         reduce using rule 59
	caracter       reduce using rule 59
	string         reduce using rule 59
	entero         reduce using rule 59
	flotante       reduce using rule 59
	fin            reduce using rule 59
	"<<"           reduce using rule 59
	"|}"           reduce using rule 59
	"-"            reduce using rule 59
	"#"            reduce using rule 59
	"!"            reduce using rule 59
	"("            reduce using rule 59
	"|"            reduce using rule 59
	upperCase      reduce using rule 59
	lowerCase      reduce using rule 59


State 21

	Instruccion -> FunctionCreate .                     (rule 17)
